@@ -30,6 +30,3 @@ will try to use /etc/pgen.conf file by default.
 I need it personally.
 
 	You could mail me at "kumaran.4353@gmail.com". I'm happy to hear you.
-
-	I need contributors for this program. Till now I am the only developer
-of this project. But I believe, this will change soon.
