@@ -30,6 +30,19 @@ DHCP6_MSG_TYPE=2
 DHCP6_TRANS_ID=0x123
 DHCP6_OP_NUM=1
 
+DHCP6_OP_CODE=16
+DHCP6_OP_LEN=13
+DHCP6_OPTION=DHCP6_VENDER_CLASS
+DHCP6_OP_VND_ENT_NO=0X12345678
+DHCP6_OP_VND_CLS_NUM=3
+DHCP6_OP_VND_CLS_LEN=2
+DHCP6_OP_VND_CLS_DATA=0x1234
+DHCP6_OP_VND_CLS_LEN=4
+DHCP6_OP_VND_CLS_DATA=0XABCDEF02
+DHCP6_OP_VND_CLS_LEN=1
+DHCP6_OP_VND_CLS_DATA=0X23
+
+/*
 DHCP6_OP_CODE=15
 DHCP6_OP_LEN=13
 DHCP6_OPTION=DHCP6_USER_CLASS
@@ -41,7 +54,6 @@ DHCP6_OP_USR_CLS_DATA=0X12345678
 DHCP6_OP_USR_CLS_LEN=1
 DHCP6_OP_USR_CLS_DATA=0XEF
 
-/*
 DHCP6_OP_CODE=14
 DHCP6_OP_LEN=0
 DHCP6_OPTION=DHCP6_RAPID_COMMIT
