@@ -26,4 +26,5 @@ pgen-0.01----------------------------------------------------------------------
 	-> Status Code Option added
 	-> Rapid Commit Option added
 	-> User Class option added
+	-> Vender Class option added
 pgen-0.02----------------------------------------------------------------------
